// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyInput matches the snapshot 1`] = `
<input
  class="css-96bzxi"
  type="text"
  value="0.00"
/>
`;

exports[`CurrencyInput with a default value matches the snapshot 1`] = `
<input
  class="css-96bzxi"
  type="text"
  value="1,234.56"
/>
`;
